--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
-# 公共配置
+# 所有情况都会加载 公共环境
+# 由于任何暴露给 Vite 源码的变量最终将出现在客户端包中，VITE_* 变量应该不包含任何敏感信息
+
+# 端口
+VITE_PORT = 5000
+
+# 网站标题
+VITE_APP_TITLE = Vite开发
