--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "vite-vue-starter",
+  "name": "vite-vue3-demo1",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite build && vite preview",
+    "preview": "npm run build && vite preview", 
     "preview:dist": "vite preview"
   },
   "dependencies": {
